[gd_scene load_steps=5 format=3 uid="uid://d0p1m5y8ns6w6"]

[ext_resource type="Script" uid="uid://c8nl2nwxdgjrk" path="res://ui/escape_menu/escape_menu.gd" id="1_g21w1"]
[ext_resource type="Theme" uid="uid://dolvw3g0eshd6" path="res://ui/themes/shoujo_ui.tres" id="2_3548v"]
[ext_resource type="PackedScene" uid="uid://b55vxp23vgg30" path="res://ui/keybinding_panel/keybinding_panel.tscn" id="3_t0thr"]
[ext_resource type="Texture2D" uid="uid://cuk1t3xca21cx" path="res://ui/escape_menu/menuborder.png" id="4_4hswm"]

[node name="EscapeMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
mouse_filter = 1
script = ExtResource("1_g21w1")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_3548v")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="TabContainer" type="TabContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme = ExtResource("2_3548v")
current_tab = 0
tabs_visible = false

[node name="ItemList" type="ItemList" parent="Panel/MarginContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/TabContainer/ItemList"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 41.0
grow_horizontal = 2

[node name="Control" type="Control" parent="Panel/MarginContainer/TabContainer/ItemList/VBoxContainer"]
layout_mode = 2

[node name="Resolution" type="HBoxContainer" parent="Panel/MarginContainer/TabContainer/ItemList/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/TabContainer/ItemList/VBoxContainer/Resolution"]
layout_mode = 2
theme = ExtResource("2_3548v")
text = "Resolution:"

[node name="Control" type="Control" parent="Panel/MarginContainer/TabContainer/ItemList/VBoxContainer/Resolution"]
layout_mode = 2
size_flags_horizontal = 3

[node name="OptionButton" type="OptionButton" parent="Panel/MarginContainer/TabContainer/ItemList/VBoxContainer/Resolution"]
layout_mode = 2

[node name="Fullscreen" type="HBoxContainer" parent="Panel/MarginContainer/TabContainer/ItemList/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/TabContainer/ItemList/VBoxContainer/Fullscreen"]
layout_mode = 2
theme = ExtResource("2_3548v")
text = "Fullscreen:"

[node name="Control" type="Control" parent="Panel/MarginContainer/TabContainer/ItemList/VBoxContainer/Fullscreen"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CheckBox" type="CheckBox" parent="Panel/MarginContainer/TabContainer/ItemList/VBoxContainer/Fullscreen"]
layout_mode = 2

[node name="MusicSFX" type="HBoxContainer" parent="Panel/MarginContainer/TabContainer/ItemList/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/TabContainer/ItemList/VBoxContainer/MusicSFX"]
layout_mode = 2
theme = ExtResource("2_3548v")
text = "Music Volume:"

[node name="Control" type="Control" parent="Panel/MarginContainer/TabContainer/ItemList/VBoxContainer/MusicSFX"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSlider" type="HSlider" parent="Panel/MarginContainer/TabContainer/ItemList/VBoxContainer/MusicSFX"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 20.0
value = 20.0

[node name="KeybindingsButton" type="Button" parent="Panel/MarginContainer/TabContainer/ItemList/VBoxContainer"]
layout_mode = 2
text = "Keybindings"

[node name="SaveButton" type="Button" parent="Panel/MarginContainer/TabContainer/ItemList/VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="ReturnButton" type="Button" parent="Panel/MarginContainer/TabContainer/ItemList/VBoxContainer"]
layout_mode = 2
text = "Return to menu"

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/TabContainer/ItemList/VBoxContainer"]
layout_mode = 2
text = "Close"

[node name="ExitButton" type="Button" parent="Panel/MarginContainer/TabContainer/ItemList/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_3548v")
text = "EXIT"

[node name="KeybindingPanel" parent="." instance=ExtResource("3_t0thr")]
visible = false
layout_mode = 1

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -235.0
offset_top = -240.0
offset_right = 848.0
offset_bottom = 840.0
scale = Vector2(0.44, 0.43)
mouse_filter = 2
texture = ExtResource("4_4hswm")

[connection signal="value_changed" from="Panel/MarginContainer/TabContainer/ItemList/VBoxContainer/MusicSFX/HSlider" to="." method="_on_h_slider_value_changed"]
